; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/opensm/opensm/extr_osm_mcast_mgr.c_osm_mcast_drop_port_list.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/opensm/opensm/extr_osm_mcast_mgr.c_osm_mcast_drop_port_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @osm_mcast_drop_port_list(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  br label %3

3:                                                ; preds = %7, %1
  %4 = load i32*, i32** %2, align 8
  %5 = call i64 @cl_qlist_count(i32* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %3
  %8 = load i32*, i32** %2, align 8
  %9 = call i64 @cl_qlist_remove_head(i32* %8)
  %10 = inttoptr i64 %9 to i32*
  %11 = call i32 @mcast_work_obj_delete(i32* %10)
  br label %3

12:                                               ; preds = %3
  ret void
}

declare dso_local i64 @cl_qlist_count(i32*) #1

declare dso_local i32 @mcast_work_obj_delete(i32*) #1

declare dso_local i64 @cl_qlist_remove_head(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
